[package]
name = "vulkan-loader-sys"
version = "1.3.235"
edition = "2021"
license-file = "LICENSE.txt"
description = "Vulkan Loader"
homepage = "https://vulkan.org"
documentation = "https://registry.khronos.org/vulkan/specs/1.3-extensions/html/index.html"
repository = "https://github.com/earthtraveller1/Vulkan-Loader-sys-rs"
readme = "README.md"
keywords = ["graphics", "vulkan", "ffi", "bindgens", "khronosgroup"]
categories = ["graphics", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.63.0"
